--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<!-- Header -->
 			<header id="header">
 				<h1>ernest boey</h1>
-				<p>I make Android apps and love technology. And &#x1F431.</p>
+				<p>I make Android apps and love technology. And cats.</p>
 				<p>Eventually this website will be done. Hopefully Soon&#8482.</>
 			</header>
 
