--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 		<!-- Header -->
 			<header id="header">
 				<h1>ernest boey</h1>
-				<p>I make Android apps and love technology. And &#x1F431.</p>
-				<p>Eventually this website will be done. Hopefully Soon&#8482.</>
+				<p>I make Android apps and love technology. And cats.</p>
+				<p>Eventually this website will be done. Hopefully Soon&#8482.</p>
 			</header>
 
 		<!-- Footer -->
